traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:4: error: type mismatch;
 found   : Unit
 required: Boolean
      while((getX()!=getWorldWidth()-1) || (getY()!=getWorldHeight()-1)){
      ^